# exediff

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
afl/: README.md  flatten.py
include/: asm.h  bytes_or_asm.h  diffseq.h  disasm.h  file_patch.h  hunk.h  hunks.h  list.h  log.h  mmap.h  mmap_file.h  read_file.h  resolve_bytes.h  rx.h  str.h
lib/: diffseq.h  minmax.h
src/: asm.c  diff.c  disasm.c  exediff.c  exepatch.c  hunk.c  hunk.h  list.c  list.h  rx.c
src/utils/: bytes_or_asm.c  file_patch.c  hunks.c  mmap.c  read_file.c  resolve_bytes.c  str.c
